Created the initial Application